final edits were made, aws ecr was used